# langsmith-rust

./: .gitignore  Cargo.toml  PUBLICATION.md  PUBLISHING.md  QUICK_START.md  READING_GUIDE.md  README.md  docs.md
docs/: ARCHITECTURE.md  INTEGRATION.md
examples/: README.md  basic_tracing.rs  decorator_example.rs  observable_graph.rs  test_llm_tracing.rs
src/: error.rs  lib.rs
src/client/: http.rs  mod.rs
src/config/: env.rs  mod.rs
src/factories/: mod.rs  tracer_factory.rs
src/models/: messages.rs  metrics.rs  mod.rs  run.rs
src/observability/: mod.rs  node_wrapper.rs  observable.rs  observer.rs
src/strategies/: mod.rs  serialization_strategy.rs  tracing_strategy.rs
src/tracing/: context.rs  decorator.rs  graph.rs  mod.rs  scope.rs  tracer.rs
src/utils/: mod.rs  serialization.rs  validation.rs
tests/: config_test.rs  decorator_test.rs  factories_test.rs  integration_test.rs  models_test.rs  strategies_test.rs  tracer_test.rs
tests/common/: mod.rs  setup.rs
tests/integration/: mod.rs  tracing_test.rs
tests/unit/: config_test.rs  decorator_test.rs  factories_test.rs  mod.rs  models_test.rs  strategies_test.rs  tracer_test.rs
