[package]
name = "langsmith-rust"
version = "0.1.3"
edition = "2021"
description = "Rust crate for manual tracing to LangSmith, providing similar ergonomics to the Python and TypeScript SDKs"
license = "MIT"
authors = ["teachmewow"]
repository = "https://github.com/teachmewow/langsmith-rust"
keywords = ["langsmith", "tracing", "observability", "langchain", "ai"]
categories = ["development-tools", "web-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
dotenvy = "0.15"
once_cell = "1.19"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "test_llm_tracing"
path = "examples/test_llm_tracing.rs"

[[example]]
name = "decorator_example"
path = "examples/decorator_example.rs"

[[example]]
name = "observable_graph"
path = "examples/observable_graph.rs"

